deploy/systems-chat-api-external.yml
apiVersion: v1
kind: Service
metadata:
  namespace: systems-dev-ns
  name: systems-chat-api-external-alb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: systems-chat-api
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
