deploy/systems-chat-api-ingress-new.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: systems-dev-ns
  name: systems-chat-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-0cbc30ceb65f60a41
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 9090}]'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: systems-chat-api-nlb
                port:
                  number: 9090
